# workflow-memory-proxy

./: .dockerignore  .gitignore  Dockerfile  README.md  README_CN.md  docker-compose.yml  pyproject.toml
docs/: EXTRACTION_AND_STORAGE_CN.md  MEMORY_DSL_V0_1.md  PROXY_MVP_CN.md  WEB_DASHBOARD_DOCKER_CN.md
scripts/: demo_memory_compressor.py  evaluate_compression.py  evaluate_multidomain_workflows.py  export_audit_samples.py  replay_audit_samples.py
src/memory_proxy/: __init__.py  compressor.py  config.py  dashboard.py  dsl.py  extractor.py  extractor_factory.py  history_pruner.py  llm_client.py  llm_extractor.py  models.py  openai_api.py  prompt_builder.py  proxy_service.py  reducer.py  reference_alias.py  server.py  static_code.py  store.py  text_merge.py  tokens.py  upstream.py  zh_semantics.py
src/memory_proxy/resources/: zh_semantics.json
storage/: schema.sql
testdata/eval_reports/: memory_proxy_multidomain_eval_round1.json  memory_proxy_multidomain_eval_round3.json  memory_proxy_multidomain_eval_round4.json  memory_proxy_multidomain_eval_round5.json
tests/: test_memory_compressor.py  test_proxy_server.py
