[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-compression-proxy"
version = "0.1.0"
description = "Rule-based workflow memory compression proxy for agent conversations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "uvicorn>=0.35.0",
    "websockets>=14.0",
]

[project.scripts]
memory-proxy = "memory_proxy.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memory_proxy = ["resources/*.sql"]
